This will fix the overflow issue on the midsection

--- a/style.css
+++ b/style.css
@@ -380,6 +380,7 @@ body{
 }
 .home-content .upper-midbody .midbody-services .services-cards{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
 }
 .home-content .upper-midbody .midbody-services .services-cards .card-services span{
